# dataset

./: .env.example  .gitignore  README.md  README_team_collection.md  alembic.ini  lab_start.bat  pyproject.toml  start.bat
artifacts/: apache_jira_projects.json
docs/: architecture_and_schema.md  closed_inclusion_policy.md  limitations_and_extensions.md  operations.md  sample_sql_queries.sql  team_handoff_20260309.md
manifests/: family_matrix.yaml  sample.manifest.yaml  team_assignments.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 20260305_0001_initial.py
scripts/: build_lab_pcs_json.py  central_control.ps1  convert_csv_to_xlsx.ps1  discover_bugzilla_products.py  download_bugzilla_team_split_round_robin.py  download_manifest_json.py  download_manifest_json_round_robin.py  export_manifest_inventory_csv.py  find_bugzilla_instance_bounds.py  find_last_bugzilla_ids_manifest.py  find_last_issue_per_manifest.py  generate_status_report.py  generate_team_assignments.py  ingest_manifest_full_raw.py  ingest_manifest_sample_raw.py  ingest_random_eclipse_raw.py  lab_collector.bat  lab_collector.py  lab_collector.sh  lab_setup.bat  lab_setup.py  lab_setup.sh  lab_status.sh  preview_all_manifest_csv.sh  reset_github_state.py  setup_remote.bat  setup_remote.ps1  team_collector.py
sql/: raw_issue_documents.sql
src/gbtd_infra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+2 more)
tests/: __init__.py  conftest.py  test_adapters_list_issue_fixtures.py  test_count_modes.py  test_infer_closed_state.py  test_manifest_loader.py  test_rate_limit_bucket.py
(+43 files in other folders)
